tests/e2e/keywords/catch_is_keyword.error
Error: syntax error in story at line 1, column 1

1|    catch = 1
      ^^^^^

E0020: `catch` is a reserved keyword
